--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -29,8 +29,15 @@ jobs:
           api_location: "" # Api source code path - optional
           output_location: "build" # Built app content directory - optional
           ###### End of Repository/Build Configurations ######
-        ## Move these to Github secrets and replace values with e.g ${{ secrets.REACT_APP_CLASSROOMS_API_URL}} ##  
         env:
+          ## Move these to Github secrets and replace values with e.g
+          # REACT_APP_COLUMNS_PER_PAGE: ${{ secrets.REACT_APP_COLUMNS_PER_PAGE }}
+          # REACT_APP_DAY_START_HOUR: ${{ secrets.REACT_APP_DAY_START_HOUR }}
+          # REACT_APP_DAY_END_HOUR: ${{ secrets.REACT_APP_DAY_END_HOUR }}
+          # REACT_APP_REFRESH_INTERVAL_MINUTES: ${{ secrets.REACT_APP_REFRESH_INTERVAL_MINUTES }}
+          # REACT_APP_CLASSROOMS_API_URL: ${{ secrets.REACT_APP_CLASSROOMS_API_URL }}
+          # REACT_APP_AVAILABILITY_API_URL: ${{ secrets.REACT_APP_AVAILABILITY_API_URL }}
+          ##
           REACT_APP_COLUMNS_PER_PAGE: "10"
           REACT_APP_DAY_START_HOUR: "7"
           REACT_APP_DAY_END_HOUR: "18"
@@ -39,7 +46,7 @@ jobs:
           REACT_APP_AVAILABILITY_API_URL: "https://classroomview-func.azurewebsites.net/api/getCalendarData?code=uqs8Zf76n5EcLAQ4qosrD2WJ5NOPxEMf-WGZo2U3LPoCAzFuEbIsVQ%3D%3D"
 
   close_pull_request_job:
-    if: github.event_name == 'pull_request' && github.event.action == 'closed'
+    if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     name: Close Pull Request Job
     steps:
@@ -49,3 +56,4 @@ jobs:
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_WITTY_WATER_088E4AF03 }}
           action: "close"
+          app_location: "/"
